--- a/app/views/common/_side_menu.html.erb
+++ b/app/views/common/_side_menu.html.erb
@@ -1,6 +1,6 @@
-<h5>Menu</h5>
-<ul>
-	<li><%= link_to "Información sociodemográfica", "/path1"  %></li>
+<ul class="nav-list">
+	<li class="nav-header">Menu</li>
+	<li><%= link_to "Información sociodemográfica", "/path1"%></li>
 	<li><%= link_to "Antecedentes", "/path1"  %></li>
 	<li><%= link_to "Enfermedad actual", "/path1"  %></li>
 	<li><%= link_to "Examen físico", "/path1"  %></li>
