--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -24,7 +24,7 @@
     <%= f.input :phone %>
     <%= f.input :mobile_phone %>
     <div class="actions">
-      <%= f.button :submit, :class => 'btn primary' %>
+      <%= f.button :submit, :class => 'btn btn-primary' %>	  
       <%= link_to 'Cancelar', :back, :class => "btn" %>
     </div>
 <% end %>
