--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -3,7 +3,7 @@
   <h1>Listado de pacientes</h1>
 </div>
 
-<table class="bordered-table zebra-striped">
+<table class="table table-striped table-bordered table-condensed">
 <thead>	
 	  <tr>
 	    <th>Nombre</th>
