--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -84,7 +84,7 @@
 		<h3>Visitas</h3>
 	</div>
 <div class="row">
-<table class="bordered-table zebra-striped">
+<table class="table table-striped table-bordered table-condensed">
   <thead>
 	<tr>
       <th>Fecha de la visita</th>
