--- a/app/views/enfermedad_actuals/_form.html.erb
+++ b/app/views/enfermedad_actuals/_form.html.erb
@@ -30,7 +30,7 @@
     <%= f.input :sintomas_psiquiatricos %>
     <%= f.input :fatiga %>
     <%= f.input :sind_uhtoff %>
-    <%= f.input :otros %>
+    <%= f.input :otros, :label => 'Episodios previos' %>
     <%= f.input :severidad %>
     <%= f.input :recuperacion %>
     <%= f.input :certeza %>
