--- a/app/views/enfermedad_actuals/show.html.erb
+++ b/app/views/enfermedad_actuals/show.html.erb
@@ -71,7 +71,7 @@
   <dt>Sind uhtoff:</dt>
   <dd><%= @enfermedad_actual.sind_uhtoff %></dd>
 
-  <dt>Otros:</dt>
+  <dt>Episodios previos:</dt>
   <dd><%= @enfermedad_actual.otros %></dd>
 
   <dt>Severidad:</dt>
