--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
 			<ul class="nav-list">
 				<li class="nav-header">Menu</li>
 						<% if @patient %><li><%= link_to "Información sociodemográfica", patient_path(@patient) %></li><% end %>
-						<% if @patient %><li><% if @patient.antecedente.nil? %> |<%= link_to "Ingresar antecedentes", new_patient_antecedente_path(@patient) %><% else %><%= link_to "Antecedentes", [@patient, @patient.antecedente] %><% end %></li><% end %>
+						<% if @patient %><li><% if @patient.antecedente.nil? %><%= link_to "Ingresar antecedentes", new_patient_antecedente_path(@patient) %><% else %><%= link_to "Antecedentes", [@patient, @patient.antecedente] %><% end %></li><% end %>
 						<% if @visit %><li><% if @visit.enfermedad_actual.nil? %><%= link_to "Añadir enfermedad actual", new_patient_visit_enfermedad_actual_path(@patient,@visit) %><% else %><%= link_to "Enfermedad actual", [@patient, @visit, @visit.enfermedad_actual] %><% end %></li><% end %>
 						<% if @visit %><li><% if @visit.ef_general.blank? %><%= link_to "Añadir examen físico general", new_patient_visit_ef_general_path(@patient,@visit) %><% else %><%= link_to "Examen físico general", [@patient, @visit, @visit.ef_general] %><% end %></li><% end %>
 						<% if @visit %><li><% if @visit.ef_columna.blank? %><%= link_to "Añadir examen físico de columna", new_patient_visit_ef_columna_path(@patient,@visit) %><% else %><%= link_to "Examen físico de columna", [@patient, @visit, @visit.ef_columna] %><% end %></li><% end %>
