Adicion del modelo de pares craneanos

--- a/app/views/ef_pares/_form.html.erb
+++ b/app/views/ef_pares/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@ef_pare) do |f| %>
+<%= simple_form_for [@patient, @visit , @ef_pare] do |f| %>
   <% if @ef_pare.errors.any? %>
     <div class="alert-message error">
       <%= f.error_notification %>
