--- a/app/views/ef_pares/show.html.erb
+++ b/app/views/ef_pares/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', ef_pares_path, :class => 'btn' %>
-  <%= link_to 'Editar', edit_ef_pare_path(@ef_pare), :class => 'btn primary' %>
+  	<%= link_to 'Ir a visita', patient_visit_path(@patient,@visit), :class => 'btn' %>
+	<%= link_to 'Editar', edit_patient_visit_ef_pare_path(@patient,@visit), :class => 'btn primary' %>
   <h1>Examen fisico: Pares Craneanos</h1>
 </div>
 
