--- a/app/views/ef_generals/edit.html.erb
+++ b/app/views/ef_generals/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', ef_generals_path, :class => 'btn' %>
-  <%= link_to 'Ver', @ef_general, :class => 'btn primary' %>
+  <%= link_to 'Atras',[@patient,@visit,@ef_general], :class => 'btn' %>
+  <%= link_to 'Ver', [@patient,@visit,@ef_general], :class => 'btn primary' %>
   <h1>Editando ef_general</h1>
 </div>
 
