--- a/app/views/ef_mentals/edit.html.erb
+++ b/app/views/ef_mentals/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', ef_mentals_path, :class => 'btn' %>
-  <%= link_to 'Ver', @ef_mental, :class => 'btn primary' %>
+  <%= link_to 'Atras', [@patient,@visit,@ef_mental], :class => 'btn' %>
+  <%= link_to 'Ver', [@patient,@visit,@ef_mental], :class => 'btn primary' %>
   <h1>Editando ef_mental</h1>
 </div>
 
