--- a/app/views/ef_psiqus/edit.html.erb
+++ b/app/views/ef_psiqus/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', ef_psiqus_path, :class => 'btn' %>
-  <%= link_to 'Ver', @ef_psiqu, :class => 'btn primary' %>
+  <%= link_to 'Atras', [@patient,@visit,@ef_psiqu], :class => 'btn' %>
+  <%= link_to 'Ver', [@patient,@visit,@ef_psiqu], :class => 'btn primary' %>
   <h1>Editando ef_psiqu</h1>
 </div>
 
