--- a/app/views/enfermedad_actuals/edit.html.erb
+++ b/app/views/enfermedad_actuals/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= link_to 'Atras', patient_visit_enfermedad_actuals_path, :class => 'btn' %>
+  <%= link_to 'Atras', [@patient,@visit,@enfermedad_actual], :class => 'btn' %>
   <%= link_to 'Ver', patient_visit_enfermedad_actual_path, :class => 'btn primary' %>
   <h1>Editando enfermedad actual</h1>
 </div>
