--- a/app/views/ef_pares/edit.html.erb
+++ b/app/views/ef_pares/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', ef_pares_path, :class => 'btn' %>
-  <%= link_to 'Ver', @ef_pare, :class => 'btn primary' %>
+  <%= link_to 'Atras', [@patient,@visit,@ef_pare], :class => 'btn' %>
+  <%= link_to 'Ver', [@patient,@visit,@ef_pare], :class => 'btn primary' %>
   <h1>Editando examen de Pares Craneanos</h1>
 </div>
 
