Prueba nuevo rep

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <%= link_to 'Nuevo Paciente', new_patient_path, :class => 'btn primary' %>
-  <h1>Listado de pacientes</h1>
+  <h1>Listado de pacientes modificado</h1>
 </div>
 
 <table class="table table-striped table-bordered table-condensed">
